--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
       </div>
 
     <header>
-      <a href="/"><img src="img/profilepic-min.jpg"></a>
-      <p>Cameron Pittman<br><span>Course Developer</span></p>
+      <a href="/"><img src="img/196-min.jpg"></a>
+      <p>Elizabeth Dolgaya<br><span>Who knows</span></p>
     </header>
 
     <div class="container">
       <div class="hero">
-        <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
+        <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: elisdolgaya@gmail.com or +375445618310
       </div>
 
 </div>
       <footer>
-        <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
+        <p>&copy; Web Performance Forever <span id="crp-stats"></span></p>
       </footer>
     </div>
   </body>
